# htmlgraph

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_ISSUES_ROOT_CAUSE.md  GEMINI.md  LICENSE  README.md  TRACKING_ISSUES_INVESTIGATION.md  WORKTREE_GUIDE.md  claude_feedback.md  docker-compose.yml  gemini-extension.json  git_native_features.md  go.mod  go.sum  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  wesmckinney-site.md  wipnote-aliases.sh  wipnote-deploy.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: Dockerfile  README.md  claude.omp.json  devcontainer.json  post-create.sh
.githooks/: post-commit  post-rewrite  pre-commit  pre-commit-systematic-check.sh
.gotest/: wipnote-gemini-system-1055872358.md  wipnote-gemini-system-256904261.md  wipnote-gemini-system-3812904071.md  wipnote-session-parent-idempotent.projectdir  wipnote-session-parent-pending-idem.projectdir  wipnote-session-parent-pending-test.projectdir  wipnote-session-parent-session-1b095c09.projectdir  wipnote-session-parent-session-cb4918d8.projectdir  wipnote-session-parent-stop-test.projectdir  wipnote-session-test-roundtrip-parent-001.projectdir  wipnote-session-test-subagent-parent-001.projectdir
.htmlgraph/: .active-session  .dev-mode-backup  .error-spikes.json  .launch-mode  active-auto-spikes.json  errors.jsonl  htmlgraph.db-shm  htmlgraph.db-wal  htmlgraph.db.backup  index.sqlite-shm  index.sqlite-wal  parent-activity.json  refs.json
.wipnote/: session-families.json
ACTIVITY_FEED_EVENT_REPORT/: index.html
AGENT_STRATEGIC_PLANNING/: index.html
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
AUTO_SPIKE_FIX_SUMMARY/: index.html
BEFORE_AFTER_COMPARISON/: index.html
BROADCAST_SYNC/: index.html
CASE_STUDY_INTELLIGENT_ORCHESTRATION/: index.html
CLI_EXTRACTION_REPORT/: index.html
CLI_MODULE_REFACTORING_SUMMARY/: index.html
CODEX_SPAWNER_DIAGNOSTIC_REPORT/: index.html
COMPLEXITY_ASSESSMENT_REPORT/: index.html
COMPLEXITY_ASSESSMENT_VISUAL/: index.html
COPILOT_COMPLETION_REPORT/: index.html
COSTS_COMMAND/: index.html
DASHBOARD_FIX_INDEX/: index.html
DASHBOARD_MULTI_LEVEL_NESTING_FIX/: index.html
DASHBOARD_NESTING_FIX/: index.html
DELEGATION_ENFORCEMENT_ADMIN_GUIDE/: index.html
DUPLICATE_EVENTS_CODE_LOCATIONS/: index.html
EVENT_CAPTURE_DIAGNOSTIC_REPORT/: index.html
EVENT_DUPLICATION_FINDINGS/: index.html
EVENT_TRACING/: index.html
FEATURE_AUDIT_SUMMARY/: index.html
FEATURE_ISSUES_DETAILED/: index.html
FEATURE_REPOSITORY_DESIGN/: index.html
Formula/: erinn.rb  htmlgraph.rb
GEMINI_3_UPGRADE/: index.html
GEMINI_SPAWNER_DIAGNOSTIC_REPORT/: index.html
GIT_CONTINUITY_ARCHITECTURE/: index.html
GIT_HOOKS/: index.html
HOOK_ARCHITECTURE/: index.html
HOOK_REFACTORING/: index.html
HOOK_TRIPLICATION_ROOT_CAUSE/: index.html
HYBRID_EVENT_CAPTURE/: index.html
INITIAL_PROMPT/: index.html
INIT_COMMAND_REFACTORING_PLAN/: index.html
INIT_REFACTOR_QUICK_REFERENCE/: index.html
LIVE_EVENT_BROADCASTING_SUCCESS/: index.html
LOCAL_FIRST_SYNC_SPIKE_REPORT/: index.html
MODEL_SELECTION_GUIDE/: index.html
MODULARIZATION/: index.html
MULTI_AI_ORCHESTRATION_GUIDE/: index.html
MULTI_LEVEL_NESTING_FIX_README/: index.html
NEXT_STEPS/: index.html
OPENCODE/: index.html
OPERATIONS_LAYER/: index.html
OPTIMIZER_EXECUTIVE_SUMMARY/: index.html
ORCHESTRATION_UPDATE_SUMMARY/: index.html
ORCHESTRATOR-OPTIMIZATION-SUMMARY/: index.html
ORCHESTRATOR-REVIEW-INDEX/: index.html
ORCHESTRATOR_ENFORCEMENT_DESIGN/: index.html
ORCHESTRATOR_INDEX/: index.html
ORCHESTRATOR_MODE_GUIDE/: index.html
ORCHESTRATOR_OPTIMIZATION_INDEX/: index.html
ORCHESTRATOR_OPTIMIZED/: index.html
PARALLEL_WORKFLOW/: index.html
PARENT_CHILD_COMPLETION_REPORT/: index.html
PARENT_CHILD_LINKING_FIX/: index.html
PATTERN_LEARNING/: index.html
PHASE_4_OFFLINE_MERGE/: index.html
PHASE_6_IMPLEMENTATION/: index.html
PLANNING_WORKFLOW/: index.html
PLUGIN_SYNC/: index.html
PROMPT_FOR_GEMINI/: index.html
PYDANTIC_INTEGRATION/: index.html
QUALITY_GATES/: index.html
QUALITY_GATES_PHASE_1AB/: index.html
QUALITY_GATES_VALIDATION_REPORT/: index.html
QUERY_COMPILATION_SUMMARY/: index.html
QUICK_REFERENCE_PHASE_1AB/: index.html
README_ORCHESTRATOR_OPTIMIZATION/: index.html
REAL_EVENTS_GENERATION_SUMMARY/: index.html
REFACTORING_STRATEGY/: index.html
RETRY_DECORATOR/: index.html
RICH_CLI_AUDIT/: index.html
ROUTING_DECISION_FLOW/: index.html
SDK_ANALYTICS/: index.html
SDK_EVENT_INSPECTION/: index.html
SDK_MODULAR_ARCHITECTURE/: index.html
SERVE_MIGRATION_CODE_INVENTORY/: index.html
SERVE_MIGRATION_INDEX/: index.html
SERVE_MIGRATION_QUICK_REFERENCE/: index.html
SESSION_COMPLETION_SUMMARY/: index.html
SESSION_ID_FIX_COMPLETE/: index.html
SESSION_STATE_MANAGEMENT/: index.html
SKILL_EXECUTION_UPDATE/: index.html
SLASH_COMMANDS_CREATED/: index.html
(+9656 files in other folders)
