[project]
name = "htmlgraph"
version = "0.33.49"
description = "Local-first observability and coordination platform for AI-assisted development. Document-backed work items with SQLite-indexed runtime state, live FastAPI/HTMX dashboard, and multi-agent session tracking."
authors = [{name = "Shakes", email = "shakestzd@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["graph", "database", "html", "css", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "justhtml>=0.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "typing_extensions>=4.0.0; python_version < '3.11'",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "fastapi-sqla>=0.3.0",
    "alembic>=1.13.0",
    "fastapi-cache2>=0.2.1",
    "orjson>=3.9.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlite3>=0.41b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "asgi-correlation-id>=4.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "invoke>=2.2.0",
    "pdoc>=14.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "sentry-sdk[fastapi]>=1.40.0",
]
observability = [
    "sentry-sdk[fastapi]>=1.40.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]
deploy = [
    "invoke>=2.2.0",
]

[project.scripts]
htmlgraph = "htmlgraph.cli.main:main"
htmlgraph-deploy = "htmlgraph.scripts.deploy:main"

[project.urls]
Homepage = "https://github.com/Shakes-tzd/htmlgraph"
Documentation = "https://github.com/Shakes-tzd/htmlgraph#readme"
Repository = "https://github.com/Shakes-tzd/htmlgraph"
Issues = "https://github.com/Shakes-tzd/htmlgraph/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/htmlgraph"]

[tool.hatch.build.targets.wheel.shared-data]
"src/python/htmlgraph/styles.css" = "htmlgraph/styles.css"
"src/python/htmlgraph/dashboard.html" = "htmlgraph/dashboard.html"
"src/python/htmlgraph/templates/AGENTS.md.template" = "htmlgraph/templates/AGENTS.md.template"
"src/python/htmlgraph/templates/CLAUDE.md.template" = "htmlgraph/templates/CLAUDE.md.template"
"src/python/htmlgraph/templates/GEMINI.md.template" = "htmlgraph/templates/GEMINI.md.template"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/packages/gemini-extension",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/python/htmlgraph --cov-report=term-missing -n auto"
asyncio_mode = "auto"
timeout = 30
markers = [
    "serial: marks tests as needing to run serially (deselect with '-m \"not serial\"')",
    "slow: marks tests as slow (may take >30s, deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "E722", "E741"]

[tool.ruff.lint.per-file-ignores]
# HTTP handler methods (do_GET, do_POST, etc.) are required by BaseHTTPRequestHandler
"src/python/htmlgraph/server.py" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = false  # Disabled due to environment differences between local and CI
disallow_untyped_defs = true
disallow_any_unimported = false  # Allow untyped third-party libraries
ignore_missing_imports = true
exclude = ["tests/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Per-module options for strict checking
[[tool.mypy.overrides]]
module = "htmlgraph.collections.task_delegation"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "htmlgraph.server"
disallow_incomplete_defs = true

[tool.pdoc]
output-directory = "docs/api-pdoc"
docformat = "google"

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.0.0",
    "schemathesis>=3.29.0",
    "hypothesis>=6.0.0",
    "pytest-timeout>=2.4.0",
]
